# campfireChat

./: LICENSE  README.md  cheatsheet.txt  pyproject.toml
src/campfirechat/: main.py
tests/: test_campfirechat.py
